--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 django==5.1.3
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
 psycopg2-binary>=2.8
 django-environ==0.11.2
 drf-yasg==1.21.8
