--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.log
 *_initial.py
 
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -156,6 +157,11 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+pytest.ini
+
+.idea
+
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
