--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-environ==0.11.2
 drf-yasg==1.21.8
 gunicorn==23.0.0
 django-cors-headers==4.6.0
+django-filter==24.1
 pytest
 pytest-django
 channels
